--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
     <div class="container">
         <div class="row">
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>FANS MEETING</strong><br><br><strong>Time</strong><br><strong><br></strong>106/02/27(一)<br>17:30 &nbsp;- 20:00<br><br><strong>Location</strong><br>台北101水舞廣場<br><br><br><strong><a href="https://www.facebook.com/events/387962071563336/" target="_blank">FB活動粉絲專頁</a></strong></p>
+                <p><strong>FANS MEETING</strong><br><br><strong>Time</strong><br><strong><br></strong>106/02/27(一)<br>17:30 &nbsp;- 20:00<br><br><strong>Location</strong><br>台北101水舞廣場<br><br><br><strong><a href="https://www.facebook.com/events/387962071563336/" target="_blank">FB活動粉絲專頁</a></strong></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3"><ul><br><br></ul></div>
             <div class="col-xs-12 col-md-6">
